# kde-bbs-client

./: PROJECT_STATUS.md  README.md  config.py  pyproject.toml
ui/: bbs_chooser.py  terminal_window.py
