[project]
name = "kde-bbs-client"
version = "0.1.0"
description = "A modern KDE client for old school telnet based BBS systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "N802",  # Allow PyQt method names like closeEvent, keyPressEvent
]
